Remove 'the the' typo in docs

--- a/docs/apps.html.in
+++ b/docs/apps.html.in
@@ -93,7 +93,7 @@
       <dd>
 	AbiCloud is an open source cloud platform manager which allows to
 	easily deploy a private cloud in your datacenter. One of the key
-	differences of AbiCloud is the the web rich interface for managing the
+	differences of AbiCloud is the web rich interface for managing the
 	infrastructure. You can deploy a new service just dragging and
 	dropping a VM.
       </dd>
