Add helper module for dealing with USB host devices
* src/Makefile.am: Add usb.h and usb.h to libvirt_util.la
* src/libvirt_private.syms: Export symbols
* src/usb.c, src/usb.h: Helper APIs for USB host devices

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -51,6 +51,7 @@ UTIL_SOURCES =							\
 		logging.c logging.h				\
 		memory.c memory.h				\
 		pci.c pci.h					\
+		hostusb.c hostusb.h				\
 		qparams.c qparams.h				\
 		storage_encryption_conf.h storage_encryption_conf.c	\
 		threads.c threads.h				\
