Handle incoming data streams in libvirtd
* daemon/stream.c: Handle incoming stream data packets, queuing until
  stream becomes writable. Handle stream completion handshake
* po/POTFILES.in: Add daemon/stream.c

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 daemon/dispatch.c
 daemon/libvirtd.c
 daemon/remote.c
+daemon/stream.c
 src/conf/domain_conf.c
 src/conf/interface_conf.c
 src/conf/network_conf.c
