Support configuration of huge pages in guests
Add option to domain XML for

     <memoryBacking>
        <hugepages/>
     </memoryBacking>

* configure.in: Add check for mntent.h
* qemud/libvirtd_qemu.aug, qemud/test_libvirtd_qemu.aug, src/qemu.conf
  Add 'hugetlbfs_mount' config parameter
* src/qemu_conf.c, src/qemu_conf.h: Check for -mem-path flag in QEMU,
  and pass it when hugepages are requested.
  Load hugetlbfs_mount config parameter, search for mount if not given.
* src/qemu_driver.c: Free hugetlbfs_mount/path parameter in driver shutdown.
  Create directory for QEMU hugepage usage, chowning if required.
* docs/formatdomain.html.in: Document memoryBacking/hugepages elements
* docs/schemas/domain.rng: Add memoryBacking/hugepages elements to schema
* src/util.c, src/util.h, src/libvirt_private.syms: Add virFileFindMountPoint
  helper API
* tests/qemuhelptest.c: Add -mem-path constants
* tests/qemuxml2argvtest.c, tests/qemuxml2xmltest.c: Add tests for hugepage
  handling
* tests/qemuxml2argvdata/qemuxml2argv-hugepages.xml,
  tests/qemuxml2argvdata/qemuxml2argv-hugepages.args: Data files for
  hugepage tests

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -176,6 +176,9 @@
         ...
 	&lt;memory&gt;524288&lt;/memory&gt;
 	&lt;currentMemory&gt;524288&lt;/currentMemory&gt;
+	&lt;memoryBacking&gt;
+	  &lt;hugepages/&gt;
+        &lt;/memoryBacking&gt;
 	&lt;vcpu&gt;1&lt;/vcpu&gt;
 	...</pre>
 
@@ -188,6 +191,11 @@
 	be less than the maximum allocation, to allow for ballooning
 	up the guests memory on the fly. If this is omitted, it defaults
 	to the same value as the <code>memory<code> element</dd>
+      <dt><code>memoryBacking</code></dt>
+      <dd>The optional <code>memoryBacking</code> element, may have an
+	<code>hugepages</code> element set within it. This tells the
+	hypervisor that the guest should have its memory allocated using
+	hugepages instead of the normal native page size.</dd>
       <dt><code>vcpu</code></dt>
       <dd>The content of this element defines the number of virtual
 	CPUs allocated for the guest OS.</dd>
