--- a/src/qemu.conf
+++ b/src/qemu.conf
@@ -134,8 +134,8 @@
 # memory from the domain is dumped out directly to a file.  If you have
 # guests with a large amount of memory, however, this can take up quite
 # a bit of space.  If you would like to compress the images while they
-# are being saved to disk, you can also set "gzip", "bzip2", or "lzma"
-# for save_image_format.  Note that this means you slow down the
-# process of saving a domain in order to save disk space.
+# are being saved to disk, you can also set "gzip", "bzip2", "lzma"
+# or "lzop" for save_image_format.  Note that this means you slow down
+# the process of saving a domain in order to save disk space.
 #
 # save_image_format = "raw"
