Deprecate lzma and lzop in favor of xz, add dep
* src/qemu_driver.c: drop lzma and lzop images compression options
  as they are deprecated by xz
* libvirt.spec.in: add requires for xz/bzip2/gzip as they are needed
  to implement the compression options

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -114,6 +114,10 @@ Requires: glusterfs-client >= 2.0.1
 %if %{with_qemu}
 # From QEMU RPMs
 Requires: /usr/bin/qemu-img
+# For image compression
+Requires: gzip
+Requires: bzip2
+Requires: xz
 %else
 %if %{with_xen}
 # From Xen RPMs
